@@ -7,21 +7,19 @@ import com.hollingsworth.arsnouveau.api.util.BlockUtil;
 import com.hollingsworth.arsnouveau.api.util.SourceUtil;
 import com.hollingsworth.arsnouveau.client.particle.ParticleUtil;
 import com.hollingsworth.arsnouveau.common.block.ITickable;
-import com.hollingsworth.arsnouveau.common.util.RegistryWrapper;
+import com.hollingsworth.arsnouveau.common.capability.SourceStorage;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraftforge.eventbus.api.Event;
+import net.neoforged.bus.api.Event;
+import org.jetbrains.annotations.NotNull;
+import software.bernie.geckolib.animatable.GeoAnimatable;
 import software.bernie.geckolib.animatable.GeoBlockEntity;
-import software.bernie.geckolib.core.animatable.GeoAnimatable;
-import software.bernie.geckolib.core.animatable.instance.AnimatableInstanceCache;
-import software.bernie.geckolib.core.animation.AnimatableManager;
-import software.bernie.geckolib.core.animation.AnimationController;
-import software.bernie.geckolib.core.animation.AnimationState;
-import software.bernie.geckolib.core.animation.RawAnimation;
-import software.bernie.geckolib.core.object.PlayState;
+import software.bernie.geckolib.animatable.instance.AnimatableInstanceCache;
+import software.bernie.geckolib.animation.*;
 import software.bernie.geckolib.util.GeckoLibUtil;
 
 import javax.annotation.Nullable;
@@ -38,8 +36,17 @@ public class SourcelinkTile extends AbstractSourceMachine implements GeoBlockEnt
         super(sourceLinkTile, pos, state);
     }
 
-    public SourcelinkTile(RegistryWrapper<? extends BlockEntityType<?>> sourceLinkTile, BlockPos pos, BlockState state) {
-        super(sourceLinkTile.get(), pos, state);
+    @Override
+    public @NotNull SourceStorage getSourceStorage() {
+        if (sourceStorage == null) {
+            sourceStorage = new SourceStorage(getMaxSource(), getTransferRate(), getTransferRate(), getSource()) {
+                @Override
+                public boolean canReceive() {
+                    return false;
+                }
+            };
+        }
+        return sourceStorage;
     }
 
     @Override
@@ -64,8 +71,8 @@ public class SourcelinkTile extends AbstractSourceMachine implements GeoBlockEnt
         if (level.getGameTime() % 100 == 0 && getSource() > 0) {
             List<ISpecialSourceProvider> providers = SourceUtil.canGiveSource(worldPosition, level, 5);
             if(!providers.isEmpty()){
-                transferSource(this, providers.get(0).getSource());
-                ParticleUtil.spawnFollowProjectile(level, this.worldPosition, providers.get(0).getCurrentPos());
+                transferSource(this, providers.getFirst().getSource());
+                ParticleUtil.spawnFollowProjectile(level, this.worldPosition, providers.getFirst().getCurrentPos(), this.getColor());
             }
         }
     }
@@ -82,7 +89,7 @@ public class SourcelinkTile extends AbstractSourceMachine implements GeoBlockEnt
 
     public void getManaEvent(BlockPos sourcePos, int total) {
         this.addSource(total);
-        ParticleUtil.spawnFollowProjectile(level, sourcePos, this.worldPosition);
+        ParticleUtil.spawnFollowProjectile(level, sourcePos, this.worldPosition, this.getColor());
     }
 
     public boolean eventInRange(BlockPos sourcePos, @Nullable Event event) {
@@ -109,15 +116,15 @@ public class SourcelinkTile extends AbstractSourceMachine implements GeoBlockEnt
     }
 
     @Override
-    public void load(CompoundTag tag) {
-        super.load(tag);
+    protected void loadAdditional(@NotNull CompoundTag tag, HolderLookup.@NotNull Provider pRegistries) {
+        super.loadAdditional(tag, pRegistries);
         progress = tag.getInt("progress");
         isDisabled = tag.getBoolean("disabled");
     }
 
     @Override
-    public void saveAdditional(CompoundTag tag) {
-        super.saveAdditional(tag);
+    public void saveAdditional(@NotNull CompoundTag tag, HolderLookup.@NotNull Provider pRegistries) {
+        super.saveAdditional(tag, pRegistries);
         tag.putInt("progress", progress);
         tag.putBoolean("disabled", isDisabled);
     }
